<resources>
    <string name="app_name">Sisa</string>

    <!-- Strings relacionadas ao login -->
    <string name="email_edit_text">Email</string>
    <string name="senha_edit_text">Senha</string>
    <string name="login_button">Entrar</string>
    <string name="cadastro_button">Cadastre-se</string>

    <!-- Strings relacionadas a telaInicial -->
    <string name="minha_grade_de_matricula">Minha Grade de Matrícula</string>
    <string name="gerar_recomendações">Gerar Recomendações</string>
    <string name="grade_curso">Grade do Curso</string>
    <string name="meu_historico">Meu Histórico</string>
    <string name="recomendacoes_anteriores">Recomendações Anteriores</string>

    <!-- Strings relacionadas a disciplina -->
    <string name="disciplina_titulo">Lista de disciplinas</string>
    <string name="nome_disciplina_text_view">NomeDisciplina</string>
    <string name="codigo_disciplina_text_view">CódigoDisciplina</string>
    <string name="periodo_disciplina_text_view">PeriodoDisciplina</string>
    <string name="semestre_disciplina_text_view">SemestreDisciplina</string>
    <string name="area_disciplina_text_view">AreaDisciplina</string>
    <string name="is_cursada_disciplina_check_box">Cursada</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tela_inicial">TelaInicialActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_captura_foto">CapturaFotoActivity</string>
</resources>
