<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              android:paddingBottom="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:paddingTop="16dp">

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_edit_text"/>

    <EditText
        android:id="@+id/senha_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/senha_edit_text"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#009933"
        android:textColor="#FFFFFF"
        android:text="@string/login_button"/>

    <Button
       android:id="@+id/cadastro_button"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:backgroundTint="#990000"
       android:textColor="#FFFFFF"
       android:text="@string/cadastro_button"/>
</LinearLayout>
